# feup-cal-VaccineRouter

./: README.md  README.txt
cityMaps/: availableCities.txt
cityMaps/espinho/: espinho_ACs.txt  espinho_SCs.txt
cityMaps/penafiel/: penafiel_ACs.txt  penafiel_SCs.txt
cityMaps/porto/: porto_ACs.txt  porto_SCs.txt
doc/: README.md  Report  Report.md
src/: .gitignore  CMakeLists.txt
src/VaccineRouter/: main.cpp
src/VaccineRouter/GraphViewer/: graphViewer.cpp  graphViewer.h
src/VaccineRouter/algorithms/: AStar.cpp  AStar.h  Dijkstra.cpp  Dijkstra.h  Tarjan.cpp  Tarjan.h
src/VaccineRouter/graph/: Graph.cpp  Graph.h  GraphProcessor.cpp  GraphProcessor.h
src/VaccineRouter/graph/edge/: Edge.cpp  Edge.h
src/VaccineRouter/graph/node/: Node.cpp  Node.h  NodeA.cpp  NodeA.h  NodeD.cpp  NodeD.h
src/VaccineRouter/model/: ApplicationCenter.cpp  ApplicationCenter.h  Center.cpp  Center.h  StorageCenter.cpp  StorageCenter.h  VaccineRouter.cpp  VaccineRouter.h  Vehicle.cpp  Vehicle.h
src/VaccineRouter/ui/: Interface.cpp  Interface.h
src/VaccineRouter/utilities/: Coordinates.cpp  Coordinates.h  MutablePriorityQueue.cpp  MutablePriorityQueue.h  StringsHashTable.h  Time.cpp  Time.h
src/algorithms/: AStar.h  Dijkstra.h
src/graph/: Edge.h  GraphProcessor.cpp  Node.h  NodeA.h  NodeD.h
src/graph/edge/: Edge.h
src/graph/node/: Node.h  NodeA.cpp  NodeD.cpp  NodeD.h
src/lib/GraphViewerCpp/SFML/: changelog.md
src/lib/GraphViewerCpp/SFML/extlibs/headers/FLAC/: stream_encoder.h
src/lib/GraphViewerCpp/SFML/extlibs/headers/stb_image/: stb_image.h  stb_image_write.h
src/lib/GraphViewerCpp/SFML/include/SFML/Graphics/: RenderWindow.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
src/lib/GraphViewerCpp/SFML/include/SFML/System/: Time.hpp
src/lib/GraphViewerCpp/SFML/include/SFML/Window/: Joystick.hpp  Keyboard.hpp  Mouse.hpp  Sensor.hpp  Touch.hpp
src/lib/GraphViewerCpp/SFML/src/SFML/Audio/: SoundStream.cpp
src/lib/GraphViewerCpp/SFML/src/SFML/Graphics/: RenderTarget.cpp  Text.cpp
src/lib/GraphViewerCpp/SFML/src/SFML/Window/: JoystickManager.cpp  WindowImpl.cpp
src/lib/GraphViewerCpp/SFML/src/SFML/Window/Win32/: JoystickImpl.cpp  WindowImplWin32.cpp
src/lib/GraphViewerCpp/SFML/tools/xcode/templates/: readme.txt
src/lib/GraphViewerCpp/include/: graphviewer.h
src/lib/GraphViewerCpp/src/: edge.cpp  graphviewer.cpp  node.cpp
src/model/: StorageCenter.h  VaccineRouter.h  Vehicle.h
src/utilities/: Coordinates.h  MutablePriorityQueue.h  Time.cpp  Time.h
tests/: tests that we might want to see
tests/AStarAlgorithmTest/: CMakeLists.txt  main.cpp
tests/DijkstraAlgorithmTest/: CMakeLists.txt  main.cpp
tests/ParsingEfficiencyTest/: CMakeLists.txt  Graph.h  main.cpp
tests/TarjanAlgorithmTest/: CMakeLists.txt  main.cpp
tests/lib/googletest-master/docs/: gmock_cook_book.md  gmock_for_dummies.md
tests/lib/googletest-master/googlemock/include/gmock/: gmock-matchers.h
tests/lib/googletest-master/googletest/include/gtest/: gtest_pred_impl.h
tests/lib/googletest-master/googletest/test/: gtest_xml_test_utils.py
